--- a/coder-swag/Base.lproj/Main.storyboard
+++ b/coder-swag/Base.lproj/Main.storyboard
@@ -18,20 +18,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SHOP BY CATEGORY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U0b-Nh-jnO">
-                                <rect key="frame" x="15" y="20" width="165" height="24"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" id="MjL-Y1-ugX"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Zoe-uP-Yar" userLabel="Category Table">
                                 <rect key="frame" x="0.0" y="59" width="375" height="544"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" rowHeight="150" id="XCR-aq-KX2" customClass="CategoryCell" customModule="coder_swag" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleAspectFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" rowHeight="150" id="XCR-aq-KX2" customClass="CategoryCell" customModule="coder_swag" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XCR-aq-KX2" id="kXY-N3-YkT">
@@ -53,11 +44,11 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="Qmp-sL-Wlg" secondAttribute="bottom" id="16n-6L-SMz"/>
                                                 <constraint firstAttribute="trailing" secondItem="Qmp-sL-Wlg" secondAttribute="trailing" id="CwX-5u-rgq"/>
                                                 <constraint firstItem="Qmp-sL-Wlg" firstAttribute="leading" secondItem="kXY-N3-YkT" secondAttribute="leading" id="EZN-8q-Grh"/>
                                                 <constraint firstItem="l0E-9p-KUR" firstAttribute="centerY" secondItem="kXY-N3-YkT" secondAttribute="centerY" id="GbU-hS-iZQ"/>
-                                                <constraint firstAttribute="bottom" secondItem="Qmp-sL-Wlg" secondAttribute="bottom" id="PdZ-7i-pPO"/>
-                                                <constraint firstItem="Qmp-sL-Wlg" firstAttribute="top" secondItem="kXY-N3-YkT" secondAttribute="top" id="U2H-qQ-kKD"/>
+                                                <constraint firstItem="Qmp-sL-Wlg" firstAttribute="top" secondItem="kXY-N3-YkT" secondAttribute="top" id="RcO-9A-fgl"/>
                                                 <constraint firstItem="l0E-9p-KUR" firstAttribute="centerX" secondItem="kXY-N3-YkT" secondAttribute="centerX" id="hac-Fd-9wI"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -68,6 +59,15 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SHOP BY CATEGORY" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U0b-Nh-jnO">
+                                <rect key="frame" x="15" y="20" width="165" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" id="MjL-Y1-ugX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <constraints>
                             <constraint firstItem="Zoe-uP-Yar" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="9vB-wv-jRh"/>
