--- a/coder-swag/Base.lproj/Main.storyboard
+++ b/coder-swag/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Zoe-uP-Yar" userLabel="Category Table">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Zoe-uP-Yar" userLabel="Category Table">
                                 <rect key="frame" x="0.0" y="59" width="375" height="544"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -26,11 +26,11 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XCR-aq-KX2" id="kXY-N3-YkT">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="149.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="digital" translatesAutoresizingMaskIntoConstraints="NO" id="Qmp-sL-Wlg" userLabel="Category Image">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="149.5"/>
+                                                    <rect key="frame" x="0.0" y="1" width="375" height="147.5"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HOODIES" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l0E-9p-KUR" userLabel="Category Title">
                                                     <rect key="frame" x="141" y="61" width="93" height="27.5"/>
@@ -44,11 +44,11 @@
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="Qmp-sL-Wlg" secondAttribute="bottom" id="16n-6L-SMz"/>
+                                                <constraint firstAttribute="bottom" secondItem="Qmp-sL-Wlg" secondAttribute="bottom" constant="1" id="16n-6L-SMz"/>
                                                 <constraint firstAttribute="trailing" secondItem="Qmp-sL-Wlg" secondAttribute="trailing" id="CwX-5u-rgq"/>
                                                 <constraint firstItem="Qmp-sL-Wlg" firstAttribute="leading" secondItem="kXY-N3-YkT" secondAttribute="leading" id="EZN-8q-Grh"/>
                                                 <constraint firstItem="l0E-9p-KUR" firstAttribute="centerY" secondItem="kXY-N3-YkT" secondAttribute="centerY" id="GbU-hS-iZQ"/>
-                                                <constraint firstItem="Qmp-sL-Wlg" firstAttribute="top" secondItem="kXY-N3-YkT" secondAttribute="top" id="RcO-9A-fgl"/>
+                                                <constraint firstItem="Qmp-sL-Wlg" firstAttribute="top" secondItem="kXY-N3-YkT" secondAttribute="top" constant="1" id="RcO-9A-fgl"/>
                                                 <constraint firstItem="l0E-9p-KUR" firstAttribute="centerX" secondItem="kXY-N3-YkT" secondAttribute="centerX" id="hac-Fd-9wI"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -83,11 +83,43 @@
                     <navigationItem key="navigationItem" title="CODER SWAG" id="6Bk-Bc-7Od"/>
                     <connections>
                         <outlet property="tblCategory" destination="Zoe-uP-Yar" id="Cfa-Jx-qKl"/>
+                        <segue destination="7Tl-wc-zXe" kind="show" id="ZAE-mH-LGK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="492" y="-711.09445277361328"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="rCR-J5-6Ui">
+            <objects>
+                <viewController id="7Tl-wc-zXe" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0AV-03-Pkk">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SHOP BY PRODUCT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Orv-L4-kYv">
+                                <rect key="frame" x="15" y="20" width="156" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" id="vgn-MM-sSP"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Orv-L4-kYv" firstAttribute="leading" secondItem="9xZ-Uk-D30" secondAttribute="leading" constant="15" id="Uqo-0s-0aC"/>
+                            <constraint firstItem="Orv-L4-kYv" firstAttribute="top" secondItem="9xZ-Uk-D30" secondAttribute="top" constant="20" id="ebF-7T-ays"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Orv-L4-kYv" secondAttribute="trailing" constant="20" symbolic="YES" id="p2q-Z4-vDk"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="9xZ-Uk-D30"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dwc-e2-b3D" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1160" y="-709"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="nvy-uJ-faU">
@@ -97,6 +129,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="afa-3N-5lK">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.3411764705882353" green="0.14901960784313725" blue="0.15686274509803921" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
